@@ -1,3 +1,9 @@
+xboxdrv 0.6.6 - (23/Jan/2011)
+=============================
+
+* fixed incorrect deadzone handling
+
+
 xboxdrv 0.6.5 - (22/Jan/2011)
 =============================
 
